--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.main-content {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #10121b;
+  width: 84%;
+  margin-left: 16%;
+}
+.custom-blue-color {
+  color: #4a5ed1;
+}
+.muted-text-color {
+  color: #72737d;
+}
+.min-height-100 {
+  min-height: 100vh;
+}
+.height-100 {
+  height: 100%;
+}
+
+.custom-font-weight-600 {
+  font-weight: 600;
+}
+.padding-left-85{
+  padding-left: 85px;
+}
+
+.location-big-icon {
+  font-size: 75px;
+}
+.social-icon-group svg {
+  width: 40px !important;
+  height: 40px;
+  background: #a3a3bc;
+  color: #10121b;
+  border-radius: 50%;
+  padding: 8px;
+  margin: 5px;
+  transition: all 0.5s ease;
+}
+
+a:hover {
+  text-decoration: none;
+}
+.social-icon-group svg:hover {
+  background-color: #0a81ec;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
