--- a/src/App.css
+++ b/src/App.css
@@ -16,14 +16,14 @@
 .height-100 {
   height: 100%;
 }
-.object__fit{
+.object__fit {
   object-fit: cover;
 }
 
 .custom-font-weight-600 {
   font-weight: 600;
 }
-.padding-left-85{
+.padding-left-85 {
   padding-left: 85px;
 }
 
@@ -39,6 +39,14 @@
   padding: 8px;
   margin: 5px;
   transition: all 0.5s ease;
+}
+.button-background-color {
+  background-color: #4a5ed1 !important;
+  border-color: #4a5ed1 !important;
+  color: #fff !important;
+}
+#tsparticles{
+  height: 100vh;
 }
 
 a:hover {
