--- a/src/Components/PortfolioPage/Portfolio.css
+++ b/src/Components/PortfolioPage/Portfolio.css
@@ -1,4 +1,5 @@
-.link-area a, .link-area-code a {
+.link-area a,
+.link-area-code a {
   text-decoration: none;
   color: white;
   font-weight: 600;
@@ -13,6 +14,18 @@
 .portfolio-image {
   position: relative;
   overflow: hidden;
+  transition: all 1s ease-in-out;
+}
+
+.portfolio-image::before{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(135, 206, 235, .5);
+  width: 0;
+  height: 0;
+  border-radius: 5px;
 }
 .link-area {
   visibility: hidden;
@@ -36,7 +49,13 @@
   visibility: visible;
   bottom: 50%;
 }
-.portfolio-image:hover .link-area-code {
+.portfolio-image:hover::before{
+  height: 100%;
+  width: 100%;
+}
+.portfolio-image:hover .link-area-code,
+.portfolio-image:active .link-area-code,
+.portfolio-image:focus .link-area-code {
   visibility: visible;
   bottom: 40%;
 }
